One test per behaviour: 172 methods that restated a sibling's fact become rows, hand-throughs, or nothing
Four reviewers read the suite by package and found 170 methods among 5705 that proved nothing a
sibling did not: literal-only variants of one assertion, adapter and service tests re-pinning the text a
domain test already owns, integration tests repeating a unit test's delegation check with a status code
on top, and one byte-identical duplicate. Everything else they read was well factored.

Literal-only siblings are now rows of one looped test with `.as(input)`, every input and every "why"
comment kept; parameterised tests were avoided on purpose, since each row of one still counts in the
suite total. Cross-layer echoes assert hand-through of the domain's output instead of its content.
Nine methods went outright. Suite total 6015 -> 5889 executions, 5705 -> 5533 methods, all green.

One real bug on the way: PublishingService caches its result, so a second row passed only because
the first had run. Each row now invalidates first.

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>